_infra/manifests/todo-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: todo-web
  name: todoweb
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    app: todo-web
  type: LoadBalancer
