_infra/manifests/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: todosvc
  name: todosvc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todosvc
  template:
    metadata:
      labels:
        app: todosvc
      annotations:
        jobico-ver: ""
    spec:
      imagePullSecrets:
        - name: reg-cred-secret
      containers:
        - env:
            - name: SPRING_PROFILES_ACTIVE
              value: devk8s
            - name: PYROSCOPE_AGENT_ENABLED
              value: "true"
            - name: PYROSCOPE_APPLICATION_NAME
              value: "todo-svc"
            - name: PYROSCOPE_FORMAT
              value: "jfr"
            - name: PYROSCOPE_PROFILING_INTERVAL
              value: "10ms"
            - name: PYROSCOPE_PROFILER_EVENT
              value: "itimer"
            - name: PYROSCOPE_PROFILER_LOCK
              value: "1"
            - name: PYROSCOPE_PROFILER_ALLOC
              value: "100k"
            - name: PYROSCOPE_UPLOAD_INTERVAL
              value: "10s"
            - name: PYROSCOPE_LOG_LEVEL
              value: "info"
            - name: PYROSCOPE_LABELS
              value: "todo-svc.jobico.org"
            - name: PYROSCOPE_SERVER_ADDRESS
              value: "http://pyroscope.obs.svc.cluster.local:4040"
          image: reg.jobico.org/todosvc:latest
          imagePullPolicy: Always
          name: todosvc
          ports:
            - containerPort: 8080
              hostPort: 8080
              protocol: TCP
              name: svc
      restartPolicy: Always
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todosvc
spec:
  tls:
    - hosts:
        - todosvc.jobico.org
      secretName: certs-secret
  rules:
    - host: todosvc.jobico.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todosvc
                port:
                  number: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: todosvc
  name: todosvc
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    app: todosvc
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: todo-web
  name: todoweb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-web
  template:
    metadata:
      labels:
        app: todo-web
      annotations:
        jobico-ver: ""
    spec:
      imagePullSecrets:
        - name: reg-cred-secret
      containers:
        - image: reg.jobico.org/todoweb:latest
          imagePullPolicy: Always
          #livenessProbe:
          #  exec:
          #    command:
          #      - curl -f http://localhost:3000/ || exit 1
          #  failureThreshold: 2
          #  periodSeconds: 60
          #  timeoutSeconds: 10
          name: todoweb
          ports:
            - containerPort: 3000
              hostPort: 3000
              protocol: TCP
      restartPolicy: Always
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todoweb
spec:
  tls:
    - hosts:
        - todo.jobico.org
      secretName: certs-secret
  rules:
    - host: todo.jobico.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todoweb
                port:
                  number: 3000
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: todo-web
  name: todoweb
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    app: todo-web
  type: LoadBalancer
